test/expected/declare_lc32.out
declare x as long char32_t
        ^
9: error: "long char32_t" is illegal for built-in type
